--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hrefcl/apidoc",
-  "version": "4.0.1",
+  "version": "4.0.2-beta.0",
   "description": "RESTful web API Documentation Generator",
   "keywords": [
     "api",
