--- a/package.json
+++ b/package.json
@@ -98,14 +98,16 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "typedoc": "^0.28.13",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "esbuild-postcss": "^0.0.4",
+    "@tailwindcss/postcss": "^4.1.13",
+    "autoprefixer": "^10.4.21"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.35.0",
     "@playwright/test": "^1.55.0",
-    "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "^0.5.18",
     "@types/commander": "^2.12.2",
     "@types/diff-match-patch": "^1.0.36",
@@ -122,11 +124,9 @@
     "@types/serve-handler": "^6.1.4",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
-    "autoprefixer": "^10.4.21",
     "changelog-light": "^3.0.3",
     "concurrently": "^9.2.1",
     "cspell": "^9.2.1",
-    "esbuild-postcss": "^0.0.4",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
