--- a/package.json
+++ b/package.json
@@ -101,7 +101,9 @@
     "winston": "^3.17.0",
     "esbuild-postcss": "^0.0.4",
     "@tailwindcss/postcss": "^4.1.13",
-    "autoprefixer": "^10.4.21"
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.13",
+    "postcss": "^8.5.6"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
@@ -138,13 +140,11 @@
     "globals": "^16.4.0",
     "mocha": "^11.7.2",
     "playwright": "^1.55.0",
-    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-sort-json": "^4.1.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "serve-handler": "^6.1.6",
-    "tailwindcss": "^4.1.13",
     "typedoc-plugin-markdown": "^4.3.4",
     "typescript": "^5.7.2"
   },
