--- a/package.json
+++ b/package.json
@@ -71,15 +71,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/typography": "^0.5.18",
     "@types/crypto-js": "^4.2.2",
     "@types/highlight.js": "^9.12.4",
+    "autoprefixer": "^10.4.21",
+    "bootstrap": "^5.3.8",
     "cli-progress": "^3.12.0",
     "clsx": "^2.1.1",
     "commander": "^14.0.0",
     "crypto-js": "^4.2.0",
     "diff-match-patch": "^1.0.5",
     "esbuild": "^0.25.9",
-    "framer-motion": "^12.23.16",
+    "esbuild-postcss": "^0.0.4",
     "fs-extra": "^11.3.1",
     "glob": "^11.0.3",
     "handlebars": "^4.7.8",
@@ -89,30 +94,25 @@
     "js-yaml": "^4.1.0",
     "klaw-sync": "^7.0.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.544.0",
     "markdown-it": "^14.1.0",
     "nodemon": "^3.1.10",
     "ora": "^5.4.1",
     "path-to-regexp": "^8.3.0",
     "picocolors": "^1.1.1",
-    "popper.js": "^1.16.1",
+    "postcss": "^8.5.6",
     "semver": "^7.7.2",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13",
     "tailwindcss-animate": "^1.0.7",
     "typedoc": "^0.28.13",
-    "winston": "^3.17.0",
-    "postcss": "^8.5.6",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@tailwindcss/typography": "^0.5.18",
-    "autoprefixer": "^10.4.21",
-    "tailwindcss": "^4.1.13",
-    "esbuild-postcss": "^0.0.4"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.35.0",
     "@playwright/test": "^1.55.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/commander": "^2.12.2",
     "@types/diff-match-patch": "^1.0.36",
     "@types/fs-extra": "^11.0.4",
