Add comprehensive API documentation for various endpoints
- Created Authentication.md detailing user authentication process including parameters, success, and error responses.
- Added Category.md with endpoints for deleting and retrieving categories.
- Introduced City.md for creating new city entries.
- Developed Company.md covering soft updates and pricing updates for companies.
- Compiled Examples.md showcasing complex interface examples and inline OpenAPI examples.
- Established Files.md for file upload functionality.
- Created Files_Management.md for user avatar upload endpoint.
- Added Mqtt.md for MQTT-related commands and subscriptions.
- Developed Products.md for updating product information.
- Compiled Schemas.md defining various OpenAPI schemas.
- Created System.md for health check endpoint documentation.
- Established User_Management.md for user update operations.
- Compiled Users.md with extensive user management endpoints including creation, deletion, and retrieval.
- Added Warnings.md to document various warning scenarios related to API usage.

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "commander": "^14.0.1",
     "crypto-js": "^4.2.0",
     "diff-match-patch": "^1.0.5",
+    "ejs": "^3.1.10",
     "esbuild": "^0.25.10",
     "esbuild-postcss": "^0.0.4",
     "fs-extra": "^11.3.2",
@@ -120,6 +121,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/commander": "^2.12.5",
     "@types/diff-match-patch": "^1.0.36",
+    "@types/ejs": "^3.1.5",
     "@types/fs-extra": "^11.0.4",
     "@types/handlebars": "^4.1.0",
     "@types/jquery": "^3.5.33",
