Add Docker and Build Tools documentation for APIDoc integration
- Introduced comprehensive Docker usage instructions, including quick start, Dockerfile examples, and Docker Compose configurations.
- Added detailed sections on build tools integration, covering Webpack, Vite, Rollup, Gulp, and Grunt.
- Included CI/CD platform support and GitHub Actions workflows for automated documentation generation.
- Provided examples for npm scripts and advanced caching strategies in CI/CD.

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -60,6 +60,106 @@
     "silentlogger",
     "somebool",
     "superbig",
-    "webspace"
+    "webspace",
+    "documentación",
+    "protocolos",
+    "desde",
+    "comentarios",
+    "código",
+    "fuente",
+    "Ejemplo",
+    "básico",
+    "Instalación",
+    "Rápido",
+    "Generar",
+    "Documentación",
+    "Completa",
+    "Configuración",
+    "Personalización",
+    "completa",
+    "proyecto",
+    "Iconos",
+    "temas",
+    "Personalizado",
+    "Contenido",
+    "secciones",
+    "Temas",
+    "Sintaxis",
+    "resaltado",
+    "Funcionalidades",
+    "Parámetros",
+    "Referencia",
+    "Ejemplos",
+    "Plantillas",
+    "prácticos",
+    "Versionado",
+    "Herencia",
+    "Gestión",
+    "versiones",
+    "reutilización",
+    "Programático",
+    "Integración",
+    "Protocolos",
+    "Formatos",
+    "Modernos",
+    "Soporte",
+    "nativo",
+    "exportación",
+    "Protocolo",
+    "completa",
+    "Esquemas",
+    "Seguridad",
+    "Autenticación",
+    "Protección",
+    "Guía",
+    "Rápida",
+    "pasos",
+    "Desarrollador",
+    "técnica",
+    "autenticación",
+    "Desarrollo",
+    "entorno",
+    "desarrollo",
+    "contenedores",
+    "Herramientas",
+    "Características",
+    "Destacadas",
+    "Añade",
+    "contenido",
+    "personalizado",
+    "cualquier",
+    "grupo",
+    "Usuarios",
+    "Completo",
+    "Documenta",
+    "especializados",
+    "remota",
+    "admited",
+    "Nativo",
+    "especificaciones",
+    "directamente",
+    "Interés",
+    "Sitio",
+    "Oficial",
+    "Repositorio",
+    "Contribuciones",
+    "Reportar",
+    "Discusiones",
+    "Contribución",
+    "Licencia",
+    "archivo",
+    "detalles",
+    "Hecho",
+    "comunidad",
+    "Originalmente",
+    "creado",
+    "apidocts",
+    "picocolors",
+    "mqtt",
+    "MQTT",
+    "Mqtt",
+    "Empresa",
+    "Ciudad",
+    "Categoría"
   ]
 }
