fix: Update all references from apidocts.com to apidoc.app in documentation and code

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "rest",
     "restful"
   ],
-  "homepage": "https://apidocts.com",
+  "homepage": "https://apidoc.app",
   "bugs": {
     "url": "https://github.com/hrefcl/apidoc/issues"
   },
