Refactor scripts for improved readability and performance; add JSON encryption module for secure documentation handling

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -42,14 +42,7 @@
       "@shared/utils/*": ["packages/shared-utils/src/*"]
     }
   },
-  "include": [
-    "packages/*/src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "tmp",
-    "*.config.*"
-  ],
+  "exclude": ["node_modules", "dist", "tmp", "*.config.*"],
+  "include": ["packages/*/src/**/*"],
   "references": []
 }
