--- a/apps/apidoc-template/tsconfig.json
+++ b/apps/apidoc-template/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
     "target": "ES2022",
     "module": "esnext",
@@ -18,11 +17,7 @@
     "lib": ["ES2022", "DOM"],
     "types": ["jquery", "node"]
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "exclude": ["node_modules", "dist"],
+  "extends": "../tsconfig.json",
+  "include": ["src/**/*"]
 }
