--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ package-lock.json
 e2e-tests/test-results/
 e2e-tests/playwright-report/
 e2e-tests/test-results-*/
+apps/apicat-template/public/data
