--- a/apps/apicat-template/package.json
+++ b/apps/apicat-template/package.json
@@ -10,17 +10,18 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
+    "highlight.js": "^11.9.0",
+    "lucide-vue-next": "^0.544.0",
     "pinia": "^2.1.7",
-    "highlight.js": "^11.9.0"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.1.6",
-    "vite-ssg": "^0.23.6",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.6",
+    "vite-ssg": "^0.23.6"
   }
 }
