feat: Implement APIDoc v5 with Vue 3 and Vite
- Add GenericContent component for rendering API documentation content.
- Create DocsLayout for consistent layout across documentation pages.
- Establish main CSS file with Tailwind CSS for styling.
- Set up main.js to initialize Vue app with Pinia and router.
- Develop DocPage and HomePage components for displaying documentation.
- Configure Vue Router for navigation between home and documentation pages.
- Implement Pinia store for managing documentation data and state.
- Configure Tailwind CSS with custom colors and styles.
- Set up Vite configuration for building and serving the application.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ e2e-tests/test-results/
 e2e-tests/playwright-report/
 e2e-tests/test-results-*/
 apps/apicat-template/public/data
+apps/apidoc-template-v5/public/data
