--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ e2e-tests/playwright-report/
 e2e-tests/test-results-*/
 apps/apicat-template/public/data
 apps/apidoc-template-v5/public/data
+.vite-ssg-temp
