--- a/apps/apidoc-template-v5/package.json
+++ b/apps/apidoc-template-v5/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "lucide-vue-next": "^0.544.0",
+    "mqtt": "^5.14.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-i18n": "^9.14.5",
