feat: Implement @model parsers for Sequelize models with lifecycle hooks
- Added parser for @apiModelHook to handle Sequelize lifecycle hooks documentation.
- Created parser for @model to define data model documentation, including attributes and relationships.
- Introduced @modelDescription parser for detailed model descriptions.
- Developed @modelGroup parser to organize related data models.
- Implemented @modelName parser for unique model identifiers.
- Enhanced sequelize-parser utility to extract model definitions, attributes, relationships, and hooks from Sequelize classes.
- Updated example models to demonstrate new parsers and their usage.
- Generated initial apidoc.json for documentation output.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ tmp/
 .idea
 test/*/fixtures*/vendor/
 test/apidoc/fixtures*/css/
+# Ignore compiled JS files in core/ (TypeScript source only)
+core/**/*.js
+core/**/*.js.map
 # Misc and development files
 .archive
 dist
