--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
     "build:apicat-desktop": "yarn workspace @hrefcl/apicat-desktop build",
     "test:e2e": "cd e2e-tests && npx playwright test",
     "example:apicat": "npm run build:apicat",
+    "example:model": "npm run build && ./bin/apidoc -v -i examples/models/ -o ./tmp/model-output/",
+    "build:model": "npm run build && ./bin/apidoc -v -i examples/models/ -o ./tmp/model-output && ./bin/apicat -i ./tmp/model-output",
     "apicat": "npm run build && ./bin/apicat -v",
     "build:apicat": "cd apps/apicat-template && npm run build && cd ../.. && npm run build && ./bin/apidoc -v -i examples/apicat/ -o ./tmp/apicat-output -t apps/apicat-template/dist/",
     "dev:apicat-template": "npm run build && ./bin/apidoc -v -i examples/apicat/ -o ./tmp/apicat-output && node scripts/copy-apicat-json.js && cd apps/apicat-template && npm run dev"
