--- a/apps/apidoc-template-v5/package.json
+++ b/apps/apidoc-template-v5/package.json
@@ -2,7 +2,7 @@
   "name": "@apidoc/template-v5",
   "version": "5.0.0",
   "type": "module",
-  "description": "APIDoc v5 - Beautiful Documentation Template with MagicUI",
+  "description": "APIDoc v5",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "lucide-vue-next": "^0.544.0",
+    "marked": "^16.3.0",
     "mqtt": "^5.14.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-i18n": "^9.14.5",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "highlight.js": "^11.11.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.1",
