feat: Add scripts for embedding JSON data and inlining assets in HTML files
- Implemented `embed-data.js` to read JSON files from `public/data` and embed them as `window.__APICAT_DATA__` in generated HTML files.
- Created `inline-assets.js` to inline CSS and JS assets into HTML files for compatibility with file:// protocol.
- Developed `ssg-routes.js` to generate dynamic routes for vite-ssg based on JSON structure in `public/data`.

--- a/apps/apidoc-template-v5/package.json
+++ b/apps/apidoc-template-v5/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:with-data": "vite build && node scripts/embed-data.js",
+    "build:ssg": "vite-ssg build",
+    "inline:assets": "node scripts/inline-assets.js",
+    "embed:data": "node scripts/embed-data.js",
     "preview": "vite preview",
     "test": "playwright test",
     "test:ui": "playwright test --ui",
@@ -25,8 +29,11 @@
     "@playwright/test": "^1.55.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.18",
+    "glob": "^11.0.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vite-plugin-singlefile": "^2.3.0",
+    "vite-ssg": "^0.23.8"
   }
 }
