--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "serve": "export PROTOCOL=http; export HOST=127.0.0.1; export PORT=8080; npm run serve:stop; npm run build:example && podman run --rm --name apidoc -p $PORT:80 -v ./tmp/apidoc-output:/usr/share/nginx/html:ro -d nginx; npm run serve:open",
     "serve:open": "xdg-open $PROTOCOL://$HOST:$PORT/ || open $PROTOCOL://$HOST:$PORT/",
     "serve:stop": "podman stop apidoc",
-    "start": "npx serve tmp/apidoc-output -p 8080 ",
+    "start": "npx serve tmp/apidoc-output -p 8080",
+    "preview": "npx serve tmp/apidoc-output -p 9999",
     "test": "mocha --colors --no-package --no-config 'test/**/*_test.*js'",
     "test:ci": "export CI=true; npm run test:lint && npm test;",
     "test:fix": "eslint --fix",
