--- a/package.json
+++ b/package.json
@@ -46,56 +46,63 @@
     "test": "test"
   },
   "scripts": {
+    "//": "=== BUILD SCRIPTS ===",
     "build": "npm run build:css && tsc && npm run build:copy-core",
     "build:css": "node scripts/build-css.js",
-    "build:copy-core": "cp core/*.js dist/core/ 2>/dev/null && cp -r core/errors core/filters core/languages core/parsers core/parsers-jsdoc core/utils core/workers dist/core/ 2>/dev/null || true",
     "build:css:dev": "node scripts/build-css.js --dev",
+    "build:copy-core": "cp core/*.js dist/core/ 2>/dev/null && cp -r core/errors core/filters core/languages core/parsers core/parsers-jsdoc core/utils core/workers dist/core/ 2>/dev/null || true",
     "build:clean": "rm -rf dist && npm run build:css && npm run build",
-    "build:debug": "npm run build:example -- --debug",
-    "build:apidoc": "npm run build && ./bin/apidoc -v -i examples/apidoc/ -o ./tmp/apidoc-output -t apps/apidoc-template/",
     "build:watch": "tsc --watch",
-    "container:build": "podman build -t apidoc/apidoc .",
-    "dev": "npm run build:watch",
-    "dev:full": "concurrently \"npm run dev:hot\" \"npm run start\"",
-    "dev:hot": "node scripts/dev-watch.js",
-    "dev:template": "npm run build:example && npm run start",
-    "docs": "typedoc",
-    "docs:serve": "npm run docs && npx serve docs/api -p 3001",
-    "docs:watch": "typedoc --watch",
-    "migrate:clean": "find . -name '*.js' -o -name '*.mjs' | grep -v node_modules | grep -v dist | grep -v test | grep -v example | xargs rm -f",
-    "migrate:ts": "node scripts/migrate-to-ts.js",
-    "pre-commit": "npm run typecheck && npm run eslint && npm run test",
-    "prepublishOnly": "npm run build:clean",
-    "release": "npm run build:clean && changelog --non-cc --link-url https://github.com/hrefcl/apidoc.git",
-    "serve": "export PROTOCOL=http; export HOST=127.0.0.1; export PORT=8080; npm run serve:stop; npm run build:example && podman run --rm --name apidoc -p $PORT:80 -v ./tmp/apidoc-output:/usr/share/nginx/html:ro -d nginx; npm run serve:open",
-    "serve:open": "xdg-open $PROTOCOL://$HOST:$PORT/ || open $PROTOCOL://$HOST:$PORT/",
-    "serve:stop": "podman stop apidoc",
+
+    "//": "=== MAIN SCRIPTS (v5 - Vue 3 Template) ===",
+    "example": "npm run build && ./bin/apidoc -v -i examples/apicat -o tmp/apidoc-output",
+    "dev:template": "cd apps/apidoc-template-v5 && npm run dev",
     "start": "npx serve tmp/apidoc-output -p 8080",
     "preview": "npx serve tmp/apidoc-output -p 9999",
+
+    "//": "=== LEGACY SCRIPTS (v4 - Old Template) ===",
+    "example:v4": "npm run build && ./bin/apidoc -v -i examples/apidoc -o tmp/apidoc-output-v4 --old",
+    "start:v4": "npx serve tmp/apidoc-output-v4 -p 8080",
+
+    "//": "=== DEVELOPMENT ===",
+    "dev": "npm run build:watch",
+
+    "//": "=== TESTING ===",
     "test": "mocha --colors --no-package --no-config 'test/**/*_test.*js'",
     "test:ci": "export CI=true; npm run test:lint && npm test;",
-    "test:fix": "eslint --fix",
+    "test:e2e": "cd e2e-tests && npx playwright test",
     "test:lint": "npm run test:spell-support && npm run test:spell && eslint;",
     "test:spell": "cspell --fail-fast './bin/apidoc' './example/**/*' './lib/**/*.*js' './template/index.html' './template/src/*' './test/**/*' --config ./cspell.config.json",
     "test:spell-support": "cspell --fail-fast ./README.md ./CONTRIBUTING.md ./CONTRIBUTORS.md ./SECURITY.md --config ./cspell.config.json",
+    "test:fix": "eslint --fix",
+    "test:packages": "yarn workspaces run test",
+
+    "//": "=== QUALITY ===",
     "typecheck": "tsc --noEmit",
     "eslint": "eslint .",
-    "example": "npm run build:apidoc",
     "format": "npm run format:handlebars && prettier --write \"**/*.{ts,js,html,json}\"",
     "format:html": "npm run format:handlebars && prettier --write \"template/**/*.html\"",
     "format:handlebars": "node scripts/format-handlebars.js",
     "format:check": "prettier --check \"**/*.{ts,js,html,json}\"",
+    "pre-commit": "npm run typecheck && npm run eslint && npm run test",
+
+    "//": "=== DOCUMENTATION ===",
+    "docs": "typedoc",
+    "docs:serve": "npm run docs && npx serve docs/api -p 3001",
+    "docs:watch": "typedoc --watch",
+
+    "//": "=== WORKSPACES ===",
     "build:packages": "yarn workspaces run build",
-    "test:packages": "yarn workspaces run test",
-    "dev:apicat": "yarn workspace @hrefcl/apicat-desktop dev",
-    "build:apicat-desktop": "yarn workspace @hrefcl/apicat-desktop build",
-    "test:e2e": "cd e2e-tests && npx playwright test",
-    "example:apicat": "npm run build:apicat",
-    "example:model": "npm run build && ./bin/apidoc -v -i examples/models/ -o ./tmp/model-output/",
-    "build:model": "npm run build && ./bin/apidoc -v -i examples/models/ -o ./tmp/model-output && ./bin/apicat -i ./tmp/model-output",
-    "apicat": "npm run build && ./bin/apicat -v",
-    "build:apicat": "cd apps/apicat-template && npm run build && cd ../.. && npm run build && ./bin/apidoc -v -i examples/apicat/ -o ./tmp/apicat-output -t apps/apicat-template/dist/",
-    "dev:apicat-template": "npm run build && ./bin/apidoc -v -i examples/apicat/ -o ./tmp/apicat-output && node scripts/copy-apicat-json.js && cd apps/apicat-template && npm run dev"
+
+    "//": "=== RELEASE ===",
+    "prepublishOnly": "npm run build:clean",
+    "release": "npm run build:clean && changelog --non-cc --link-url https://github.com/hrefcl/apidoc.git",
+
+    "//": "=== CONTAINER (LEGACY) ===",
+    "container:build": "podman build -t apidoc/apidoc .",
+    "serve": "export PROTOCOL=http; export HOST=127.0.0.1; export PORT=8080; npm run serve:stop; npm run example && podman run --rm --name apidoc -p $PORT:80 -v ./tmp/apidoc-output:/usr/share/nginx/html:ro -d nginx; npm run serve:open",
+    "serve:open": "xdg-open $PROTOCOL://$HOST:$PORT/ || open $PROTOCOL://$HOST:$PORT/",
+    "serve:stop": "podman stop apidoc"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
