Refactor: Remove JSDoc/TSDoc parsers and update filtering logic
- Deleted JSDoc and TSDoc parser files to streamline the codebase.
- Updated the core parser to skip non-parsable file types, specifically Markdown and TypeScript files in the TSDoc category.
- Adjusted the input paths in the apidoc.json configuration for better organization.
- Minor adjustments to the build script for consistency.

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "build": "npm run build:css && tsc && npm run build:copy-core",
     "build:css": "node scripts/build-css.js",
     "build:css:dev": "node scripts/build-css.js --dev",
-    "build:copy-core": "cp core/*.js dist/core/ 2>/dev/null && cp -r core/errors core/filters core/languages core/parsers core/parsers-jsdoc core/utils core/workers dist/core/ 2>/dev/null || true",
+    "build:copy-core": "cp core/*.js dist/core/ 2>/dev/null && cp -r core/errors core/filters core/languages core/parsers core/utils core/workers dist/core/ 2>/dev/null || true",
     "build:clean": "rm -rf dist && npm run build:css && npm run build",
     "build:watch": "tsc --watch",
 
