--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "docs:serve": "npm run docs && npx serve docs/api -p 3001",
     "docs:watch": "typedoc --watch",
     "build:packages": "yarn workspaces run build",
+    "prepare": "npm run build:clean",
     "prepublishOnly": "npm run build:clean",
     "release": "npm run build:clean && changelog --non-cc --link-url https://github.com/hrefcl/apidoc.git",
     "container:build": "podman build -t apidoc/apidoc .",
