fix: Exclude minified template from spell checking
- Removed './template/index.html' from test:spell script
- File is Vue 3 compiled/minified with random variable names
- Prevents hundreds of false positive spell check errors in CI

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "test:ci": "export CI=true; npm run test:lint && npm test;",
     "test:e2e": "cd e2e-tests && npx playwright test",
     "test:lint": "npm run test:spell-support && npm run test:spell && eslint;",
-    "test:spell": "cspell --fail-fast './bin/apidoc' './example/**/*' './lib/**/*.*js' './template/index.html' './template/src/*' './test/**/*' --config ./cspell.config.json",
+    "test:spell": "cspell --fail-fast './bin/apidoc' './example/**/*' './lib/**/*.*js' './template/src/*' './test/**/*' --config ./cspell.config.json",
     "test:spell-support": "cspell --fail-fast ./README.md ./CONTRIBUTING.md ./CONTRIBUTORS.md ./SECURITY.md --config ./cspell.config.json",
     "test:fix": "eslint --fix",
     "test:packages": "yarn workspaces run test",
