--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@hrefcl/apidoc",
-  "version": "5.0.0",
+  "version": "5.0.3",
   "description": "APIDoc v5 - RESTful web API Documentation Generator with Vue 3 and modern features",
-  "private": true,
+  "private": false,
   "keywords": [
     "api",
     "apidoc",
