--- a/package.json
+++ b/package.json
@@ -56,18 +56,18 @@
     "build:all": "npm run build:clean && npm run build:template",
 
     "//2": "=== EXAMPLES (11 EXAMPLES) ===",
-    "example:01": "./bin/apidoc generate -i examples/01-basic-api/src/ -o tmp/01-basic-api/output && npx serve examples/01-basic-api/output -p 8080",
-    "example:02": "./bin/apidoc generate -i examples/02-openapi/src/ -o tmp/02-openapi/output && npx serve examples/02-openapi/output -p 8080",
-    "example:03": "./bin/apidoc generate -i examples/03-models/src/ -o tmp/03-models/output && npx serve examples/03-models/output -p 8080",
-    "example:04": "./bin/apidoc generate -i examples/04-mqtt/src/ -o tmp/04-mqtt/output && npx serve examples/04-mqtt/output -p 8080",
-    "example:05": "./bin/apidoc generate -i examples/05-i18n/src/ -o tmp/05-i18n/output && npx serve examples/05-i18n/output -p 8080",
-    "example:06": "./bin/apidoc generate -i examples/06-versioning/src/ -o tmp/06-versioning/output && npx serve examples/06-versioning/output -p 8080",
-    "example:07": "./bin/apidoc generate -i examples/07-authentication/src/ -o tmp/07-authentication/output && npx serve examples/07-authentication/output -p 8080",
-    "example:08": "./bin/apidoc generate -i examples/08-apiSchema/src/ -o tmp/08-apiSchema/output && npx serve examples/08-apiSchema/output -p 8080",
-    "example:09": "./bin/apidoc generate -i examples/09-code/src/ -o tmp/09-code/output && npx serve examples/09-code/output -p 8080",
-    "example:10": "./bin/apidoc generate -i examples/10-markdown/src/ -o tmp/10-markdown/output && npx serve examples/10-markdown/output -p 8080",
-    "example:11": "./bin/apidoc generate -i examples/11-multi-language/src/ -o tmp/11-multi-language/output && npx serve examples/11-multi-language/output -p 8080",
-    "example:all": "./bin/apidoc generate -i examples/ -o tmp/all && npx serve examples/output -p 8080",
+    "example:01": "./bin/apidoc generate -i examples/01-basic-api/src/ -o tmp/01-basic-api && npx serve tmp/01-basic-api -p 8080",
+    "example:02": "./bin/apidoc generate -i examples/02-openapi/src/ -o tmp/02-openapi && npx serve tmp/02-openapi -p 8080",
+    "example:03": "./bin/apidoc generate -i examples/03-models/src/ -o tmp/03-models && npx serve tmp/03-models -p 8080",
+    "example:04": "./bin/apidoc generate -i examples/04-mqtt/src/ -o tmp/04-mqtt && npx serve tmp/04-mqtt -p 8080",
+    "example:05": "./bin/apidoc generate -i examples/05-i18n/src/ -o tmp/05-i18n && npx serve tmp/05-i18n -p 8080",
+    "example:06": "./bin/apidoc generate -i examples/06-versioning/src/ -o tmp/06-versioning && npx serve tmp/06-versioning -p 8080",
+    "example:07": "./bin/apidoc generate -i examples/07-authentication/src/ -o tmp/07-authentication && npx serve tmp/07-authentication -p 8080",
+    "example:08": "./bin/apidoc generate -i examples/08-apiSchema/src/ -o tmp/08-apiSchema && npx serve tmp/08-apiSchema -p 8080",
+    "example:09": "./bin/apidoc generate -i examples/09-code/src/ -o tmp/09-code && npx serve tmp/09-code -p 8080",
+    "example:10": "./bin/apidoc generate -i examples/10-markdown/src/ -o tmp/10-markdown && npx serve tmp/10-markdown -p 8080",
+    "example:11": "./bin/apidoc generate -i examples/11-multi-language/src/ -o tmp/11-multi-language && npx serve tmp/11-multi-language -p 8080",
+    "example:all": "./bin/apidoc generate -i examples/ -o tmp/all && npx serve tmp/all -p 8080",
 
     "//3": "=== DEVELOPMENT ===",
     "dev": "npm run build:watch",
