--- a/apps/apidoc-template-v5/package.json
+++ b/apps/apidoc-template-v5/package.json
@@ -18,6 +18,8 @@
     "test:report": "playwright show-report"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-vue-next": "^0.544.0",
     "marked": "^16.3.0",
     "mqtt": "^5.14.1",
